--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 
 body {
   margin: 0;
@@ -14,7 +14,24 @@ code {
     monospace;
 }
 
+
 .textletter {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.textMain {
+    font-family: 'Open Sans', sans-serif;
+    max-width: 100%; 
+    width: 800px;
+    margin: auto;
+    text-align: center;
+    padding-top: 20px;
+}
+
+
+@media (min-width: 300px) {
+.textMain {
+    width: 90%; 
+  }
 }
 
